// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TechnologyInput should render correctly 1`] = `
<div>
  <div
    class="RadioGroup-root-1"
  >
    <div
      class="RadioGroup-container-2"
    >
      <div
        class="MuiGrid-root technologyGrid MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-4 MuiGrid-item MuiGrid-grid-md-6"
        >
          <div
            class="RadioButton-root-6"
          >
            <input
              class="RadioButton-input-8"
              id="radio-technology-PITCHED"
              name="technology"
              type="radio"
              value="PITCHED"
            />
            <label
              class="RadioButton-label-9"
              for="radio-technology-PITCHED"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root RadioButton-text-10"
                role="button"
                tabindex="-1"
              >
                <svg
                  class="technologyIcon"
                  viewBox="0 0 48 44.488"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h48v44.488H0z"
                    fill="none"
                  />
                  <path
                    d="M24 3 1 20.961l2.53 3.4 3.743-2.929v20.056h33.454V21.431l3.743 2.908L47 20.961Z"
                    fill="currentColor"
                  />
                </svg>
                addProject.dialog.form.values.technology.PITCHED
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </label>
          </div>
          <div
            class="MuiTypography-root technologyCaption Typography-root-11 MuiTypography-caption"
            data-testid="typography"
          >
            addProject.dialog.form.hints.technology.PITCHED
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-4 MuiGrid-item MuiGrid-grid-md-6"
        >
          <div
            class="RadioButton-root-6"
          >
            <input
              class="RadioButton-input-8"
              id="radio-technology-FLAT"
              name="technology"
              type="radio"
              value="FLAT"
            />
            <label
              class="RadioButton-label-9"
              for="radio-technology-FLAT"
            >
              <div
                aria-disabled="false"
                class="MuiButtonBase-root RadioButton-text-10"
                role="button"
                tabindex="-1"
              >
                <svg
                  class="technologyIcon"
                  viewBox="0 7 48 48"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h48v48H0z"
                    fill="none"
                  />
                  <path
                    d="M23.95 19.084H2.014v3.18l4.363-.022v22.76h35.146v-22.76h4.547v-3.16Z"
                    fill="currentColor"
                  />
                </svg>
                addProject.dialog.form.values.technology.FLAT
                <span
                  class="MuiTouchRipple-root"
                />
              </div>
            </label>
          </div>
          <div
            class="MuiTypography-root technologyCaption Typography-root-11 MuiTypography-caption"
            data-testid="typography"
          >
            addProject.dialog.form.hints.technology.FLAT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TechnologyInput should render disabled 1`] = `
<div>
  <div
    class="RadioGroup-root-19"
  >
    <div
      class="RadioGroup-container-20"
    >
      <div
        class="MuiGrid-root technologyGrid MuiGrid-container MuiGrid-spacing-xs-3"
      >
        <div
          class="MuiGrid-root Grid-item-22 MuiGrid-item MuiGrid-grid-md-6"
        >
          <div
            class="RadioButton-root-24 RadioButton-disabled-25"
          >
            <input
              class="RadioButton-input-26"
              disabled=""
              id="radio-technology-PITCHED"
              name="technology"
              type="radio"
              value="PITCHED"
            />
            <label
              class="RadioButton-label-27"
              for="radio-technology-PITCHED"
            >
              <div
                aria-disabled="true"
                class="MuiButtonBase-root RadioButton-text-28 Mui-disabled"
                role="button"
                tabindex="-1"
              >
                <svg
                  class="technologyIcon"
                  viewBox="0 0 48 44.488"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h48v44.488H0z"
                    fill="none"
                  />
                  <path
                    d="M24 3 1 20.961l2.53 3.4 3.743-2.929v20.056h33.454V21.431l3.743 2.908L47 20.961Z"
                    fill="currentColor"
                  />
                </svg>
                addProject.dialog.form.values.technology.PITCHED
              </div>
            </label>
          </div>
          <div
            class="MuiTypography-root technologyCaption Typography-root-29 MuiTypography-caption"
            data-testid="typography"
          >
            addProject.dialog.form.hints.technology.PITCHED
          </div>
        </div>
        <div
          class="MuiGrid-root Grid-item-22 MuiGrid-item MuiGrid-grid-md-6"
        >
          <div
            class="RadioButton-root-24 RadioButton-disabled-25"
          >
            <input
              class="RadioButton-input-26"
              disabled=""
              id="radio-technology-FLAT"
              name="technology"
              type="radio"
              value="FLAT"
            />
            <label
              class="RadioButton-label-27"
              for="radio-technology-FLAT"
            >
              <div
                aria-disabled="true"
                class="MuiButtonBase-root RadioButton-text-28 Mui-disabled"
                role="button"
                tabindex="-1"
              >
                <svg
                  class="technologyIcon"
                  viewBox="0 7 48 48"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h48v48H0z"
                    fill="none"
                  />
                  <path
                    d="M23.95 19.084H2.014v3.18l4.363-.022v22.76h35.146v-22.76h4.547v-3.16Z"
                    fill="currentColor"
                  />
                </svg>
                addProject.dialog.form.values.technology.FLAT
              </div>
            </label>
          </div>
          <div
            class="MuiTypography-root technologyCaption Typography-root-29 MuiTypography-caption"
            data-testid="typography"
          >
            addProject.dialog.form.hints.technology.FLAT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
